tests/Checker/everything/errors/27a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *27: wrong type for actual parameter
Compilation was unsuccessful.
